--- a/css/index.css
+++ b/css/index.css
@@ -15,26 +15,34 @@
     transform: rotate(360deg) scale(2);
     background-color: green
 }
-
-input[type=text]:hover,
-textarea:hover,
-select:hover {
-    background: yellow;
-    box-shadow: 2px 2px 10px 1px #33CCFF;
-    width: 300px;
-}
-
-input[type=text] {
-    font-style: italic;
+#changed{
     transition-duration: 2s;
     transition-timing-function: linear;
     transition-delay: 0.5s;
 }
 
+#changed:focus{
+    background: yellow;
+    box-shadow: 2px 2px 10px 1px #33CCFF;
+    width: 300px;
+    
+}
+
+input[type=text] {
+    font-style: italic;
+    
+}
+
+
+
+
 ::-webkit-input-placeholder,
  ::-moz-placeholder {
     font-style: italic;
-}
+
+     
+     
+ }
 
 .imgtree {
     position: relative;
